<resources>
    <string name="app_name">ThermalTag</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="logonFormTitle">ACCOUNT LOGIN</string>
    <string name="loginText">LOGIN</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="shipperCert">Origin Certificate</string>
    <string name="harvestDate">Harvest Date</string>
    <string name="harvestLocation">Harvest Location</string>
    <string name="shellfishType">Shellfish Type</string>
    <string name="quantity">Quantity</string>
    <string name="temp">Temperature</string>
    <string name="geoLocation">GEO Location</string>
    <string name="timeScan">Time of Scan</string>
    <string name="dateScan">Date of Scan</string>
    <string name="scanId">Unique Scan ID</string>
    <string name="action_settings">Scan Log</string>
    <string name="button_text">OCR!</string>
    <string name="text_hint">OCRed Text will appear here</string>
    <string name="ocr_settings">OCR Scan</string>
</resources>
