<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="thermaltag.thermaltag.MainActivity"
    android:background="@color/thermalTagOrange"
    android:clickable="true">

    <View
        android:id="@+id/LoginPannel"
        android:background="#ffffff"
        android:layout_height="350dp"
        android:layout_width="match_parent"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20sp" />

    <ImageView
        android:paddingTop="20dp"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:id="@+id/imageView"
        android:src="@drawable/thermaltag_logo"
        android:layout_alignTop="@+id/LoginPannel"
        android:layout_centerHorizontal="true"
        android:outlineProvider="none"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logonFormTitle"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="33dp"
        android:textColor="@color/thermalTagGrey"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/usernameHint"
        android:layout_marginTop="22dp"
        android:textColor="@color/thermalTagGrey"
        android:typeface="sans"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/thermaltag_username_bkgd"
        android:paddingStart="55dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/passwordHint"
        android:background="@drawable/thermaltag_password_bkgd"
        android:paddingStart="55dp"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginTop="26dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:src="@drawable/circle_login"
        android:paddingTop="25dp"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loginText"
        android:id="@+id/textView2"
        android:layout_below="@+id/LoginPannel"
        android:layout_alignParentBottom="false"
        android:textColor="@color/thermalTagWhite"
        android:layout_alignStart="@+id/login_button"
        android:layout_alignEnd="@+id/login_button"
        android:textAlignment="center"
        android:paddingTop="10dp" />

</RelativeLayout>
